# app/Query/Request/ProjectQuery.php
@@ -2,6 +2,8 @@
 
 namespace App\Query\Request;
 
+use Carbon\Carbon;
+
 use Illuminate\Support\Facades\DB;
 use App\Model\Core\Project;
 
@@ -33,9 +35,34 @@ class ProjectQuery implements IProjectQuery
     public function index(Request $request)
     {
         try {
+            $rules = [
+                $this->name    => 'string|min:1|max:128|',
+                $this->address    => 'string|min:1|max:1024|',
+                $this->date_init    => 'date',
+                $this->date_closed    => 'date',
+            ];
+            // Ejecutamos el validador y en caso de que falle devolvemos la respuesta
+            $validator = Validator::make($request->all(), $rules);
+            if ($validator->fails()) {
+                throw (new ValidationException($validator->errors()->getMessages()));
+            }
+        } catch (\Exception $e) {
+            return response()->json(['message' => 'Los datos ingresados no son validos!', 'error' => $e->getMessage()], 403);
+        }
+
+        // return response()->json([
+        //     'request' => $request->input(),
+        //     // 'date_init'=> Carbon::create($request->date_init)->format('Y-m-d'),
+        //     'date_init'=> Carbon::create($request->date_init)->toDateTimeString(),
+        //     'now'=> Carbon::now()->toDateTimeString()
+        // ]);
+
+        try {
+
             //Devuelve todos los PROJECTS existentes
             $project = Project::query()
-                ->select(['id',
+                ->select([
+                    'id',
                     'name',
                     'price',
                     'date_init',
@@ -51,6 +78,10 @@ class ProjectQuery implements IProjectQuery
                 ])
                 ->with(['customers'])
                 ->name($request->name)
+                ->adress($request->adress)
+                ->date_init($request->date_init)
+                ->date_closed($request->date_closed)
+                // ->date_between('date_init', Carbon::create($request->date_init)->toDateTimeString(), Carbon::now()->toDateTimeString())
                 ->paginate($request->limit ?? 12, ['*'], '', $request->page ?? 1);
 
             return response()->json(['projects' => $project]);
@@ -92,7 +123,7 @@ class ProjectQuery implements IProjectQuery
                 $this->date_init => $request->date_init,
                 $this->date_closed => $request->date_closed,
                 $this->address => $request->address,
-                $this->location => $request->location,                
+                $this->location => $request->location,
                 $this->quotation => $request->quotation,
                 $this->goal => $request->goal,
                 $this->photo => $request->photo,
@@ -125,7 +156,8 @@ class ProjectQuery implements IProjectQuery
                 if ($pj) {
                     //Select a la BD: TB_projects
                     $project = DB::table('projects')
-                        ->select(['id',
+                        ->select([
+                            'id',
                             'name',
                             'price',
                             'date_init',
